<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conteudoView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".RayRayParade">

    <ImageButton
        android:id="@+id/startOver"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/start_over"
        app:srcCompat="@drawable/start_over" />

    <ImageButton
        android:id="@+id/resetTable"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/reset_table"
        app:srcCompat="@drawable/reset_table" />

    <ImageButton
        android:id="@+id/howToPlay"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/how_to_play"
        app:srcCompat="@drawable/how_to_play" />

    <TextView
        android:id="@+id/score_moves"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="96dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/maxNumber"
        android:textSize="12sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/moves"
        tools:ignore="RelativeOverlap"/>

    <LinearLayout
        android:id="@+id/rays01_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/rays02_03"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray1"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray01" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays02_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/rays04_06"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray2"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray02" />

        <ImageView
            android:id="@+id/ray3"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray03" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays04_06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/rays07_10"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray4"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray04" />

        <ImageView
            android:id="@+id/ray5"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray05" />

        <ImageView
            android:id="@+id/ray6"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray06" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays07_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/rays11_15"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray7"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray07" />

        <ImageView
            android:id="@+id/ray8"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray08" />

        <ImageView
            android:id="@+id/ray9"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray09" />

        <ImageView
            android:id="@+id/ray10"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays11_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray11"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray11" />

        <ImageView
            android:id="@+id/ray12"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray12" />

        <ImageView
            android:id="@+id/ray13"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray13" />

        <ImageView
            android:id="@+id/ray14"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray14" />

        <ImageView
            android:id="@+id/ray15"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray15" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays16_19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/rays11_15"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray16"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray16" />

        <ImageView
            android:id="@+id/ray17"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray17" />

        <ImageView
            android:id="@+id/ray18"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray18" />

        <ImageView
            android:id="@+id/ray19"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray19" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays20_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/rays16_19"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray20"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray20" />

        <ImageView
            android:id="@+id/ray21"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray21" />

        <ImageView
            android:id="@+id/ray22"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray22" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays23_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/rays20_22"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray23"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray23" />

        <ImageView
            android:id="@+id/ray24"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rays25_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/rays23_24"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ray25"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ray25" />

    </LinearLayout>

    <ImageView
        android:id="@+id/skill_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/skill_level"
        app:srcCompat="@drawable/skill_level" />

    <ImageButton
        android:id="@+id/easyButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/easy"
        app:srcCompat="@drawable/easy" />

    <ImageButton
        android:id="@+id/mediumButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/medium"
        app:srcCompat="@drawable/medium" />

    <ImageButton
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/hard"
        app:srcCompat="@drawable/hard" />

</RelativeLayout>